@@ -1,18 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ttf-fifthhorseman-dkg-handwriting-0.15.tar.xz 307896 SHA256 3daf47e3f3d0b9f6d85bd6f1a6f65d706a49ede1c7fc60e1880cc8ba0cbdbdf5 SHA512 fa0eeaa7557b8c407261b9d2676afdccd824ff1db875ceb746ff3de1132814af301e8f0d6bb2d51f42d232993c1c7a2aa77c86b3d1395498c5f2d9854f238fa2 WHIRLPOOL abf2845b6ad693aabb99a4abab2b612fda50c8f561ca4e7406407a9fa549878d656c518db038c8788db7684f46d6e5c4a97bd8b83673078707369c7471401481
-EBUILD ttf-fifthhorseman-dkg-handwriting-0.15.ebuild 623 SHA256 015d74145143998630d618c6c2e7f5aa0abbaadb6a3666eccb462911edcf91af SHA512 64c055a16f168fd53770506b46303323950699d0bbb144cfab9a9551391f95a4d3909d4561e56ba7ba5c417984087b8fdc880ac785811bb80c705217c71b5f41 WHIRLPOOL c3b98fdb3a869579185fbb960591711f37b6a8603abedbfba871744c2154977c03d727fc08e0ae31521cd4f2e2a8a5cee1d8f828d32b6572a7feeee6f4acc352
-MISC ChangeLog 881 SHA256 4c414d7367eac2a6d018897ccb35fecf032e80a3f396602f2616e477a4e7c139 SHA512 ada8d4c2a384b9fd19fe22725588a9ffd0af8483393467127612b87928d59b533a088ca5cea11bc090a54b143990be6c01d13ce493541d08353469df0ed336b7 WHIRLPOOL 0cea5c3a7b486cc5c73522c6068da380e328acb07eb7f13244ed0cf32a7eefc6c0a4da3366a4917d67ee27714169b272d86c452e36a7397aa5a5f43c888d6042
-MISC metadata.xml 342 SHA256 0b5c9504e96bf548f2eeac8650657bf8d8955b84985f1c11b324982d911a827b SHA512 91f108fa66f34484da42c6865cb9d2566fc0efa805952aa6dea8675268e9986e35a35f147932b4877a977f299c7a8cdeeac7ba3a8248481fb4d0a2a7f8eafa07 WHIRLPOOL 77ea6d1538e0d9898ecf9726431b064c7d2d3cfdb0aa0684712dea915c3d03da64ee9c9fa20bbe2e0e6ce256b0ea10fcb8baad348dd972f1ea0d95cfe03a27e3
+DIST ttf-fifthhorseman-dkg-handwriting-0.15.tar.xz 307896 BLAKE2B 8a0bf19f262e964adc32aaf1f45a7b39ea892068131e7ff08e42f93b4aafcdf3a66fe4ba9bccec82369ef32f360179a2c1d447b1eedffd24cdd2f2fd61219fb0 SHA512 fa0eeaa7557b8c407261b9d2676afdccd824ff1db875ceb746ff3de1132814af301e8f0d6bb2d51f42d232993c1c7a2aa77c86b3d1395498c5f2d9854f238fa2
+EBUILD ttf-fifthhorseman-dkg-handwriting-0.15.ebuild 597 BLAKE2B b29e1c1a831faa8ded48736dcefaae8d688fe6688c588587d469597583e189814d0dabc55d6c8213f48eac439405c84f71e6c52942adec64c0103eac0d7ddc63 SHA512 0ab4d82dcaf341e5956336281212e811c0ccdcd80d2aa5ef4bb5e7002fd3c4147c5561343f044398abfd85b687f256cf0bc4d41f16be068e704823f7da34bbd9
+MISC ChangeLog 1047 BLAKE2B 9b4623fe81825ba36d53a7c01fa9cee5eb786073eddf62347c3cb4872fb09f1fc0eaa5643d97196f87370e2c93570fadec02cfa981fde32a9560a370da4f5e2f SHA512 5aff047be2ddb78ec85df7d56632bee036f3a81b3963a436b6d9f891a6038d50a872136b2ee0871d531a7b2d69ca0c89135eaa2db4d28861abbbf7b28829ad69
+MISC metadata.xml 356 BLAKE2B 417767d61c18813e224f79fede3df5596d6f3ea821a6b5fa24c6c648ec45464694db4d82884682c355917507c6b879d4e3326cc68e1cfc1d447639bab29e706d SHA512 de7b350b5a724826f4ea5671706499854ae2463de27785a66e34f34b7690689010d89153f4026f1d0e117e6977809a33fea964ba897b47d036a8ecd0c7fd7fe3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVcHxVAAoJEKXBodJLEo5SzFIH/3Yfb9oOmVjiOV6aW2V6SLqE
-uITjdOn5l3/jYoCwPulM7jlnFx/MFkUr5GGYcOwtjYV56H5hL0tGPlCstst2RHpK
-xgLuxR3Vg5syJmNoxox+0dBb9nkGZ+QhiHaa8Nuqm0bp9mHn7A6gKFf1jiI3qai8
-FM96t5Svm+1VXGQ3CA3MbuJXNWAacEZ4QkBKjxCFnz8jFMJ7aomdHfQqQKjtKFbF
-3dzxKg4d1R0xP7J53by3z8nuxZagdgTg0eLG7qD7Iw9W4ejPrigG/oGwd56ZU/zK
-fgzumJA2omV4YM6zplLI/mW5gjodRifjColt9MIZOZbi6mUKNVWp4j/rhdmMwhE=
-=GIrs
+iQIzBAEBCAAdFiEEfxbTlVjbAaSxX4Ek8tyApW4P2M0FAmBmPGwACgkQ8tyApW4P
+2M0E3w/5AVs/gKavOk/hfyySHlLb+xIPtFowgNS5FW1NR8OOSBc3q8epUU9jjaj4
+9A2DRGiKDhtdfBv61t2Z81ddCdfPNyqqrRDDRWu8RP9r1+zxw3BqUMhwyg+j4Xj+
+lkvW5PJRUOvADObXLQWOMA/Rn/3s8nYMN92NK/yAOOQi9p8zvdtQrLAhqHVGHoxd
+S5FBFw5TEbKF/g0ZCfIq0cveKyU2F9PwmLF5utDia0P2XRxLWXFZMEae+4hN53ZS
+vjXnch/GV9zIpO8eniITpiPDXb1zEV1TBlsIWQML+cZME0kyVgrT2h+ULa1SMyOx
+Fvs/9uHoXLMzfgJfstQx0URFsE/sFFMcA2qhkdjxX7ANWX/TCoPfLmQOom0CoI08
+GGa+HbFyOlKwkOXLkO+EvhMu/nY8x4zlyv31kG6VebtO77gTDp7Gk7pe8cH3el46
+u/jSyRDG+uQpinmy0MneD5x3tCTi14yPeTFpVGpeFOFX9Dmbe3F790OkUB2Xl8vm
+1MYtgf2p8VtEnmqG/QjD6UAEaptb+7LrR24QI6s+a/NSejUgzoYnvaaqqWLQNUpE
+VMN8Af8B1ytN34L+WjKLApqSobMQxYEPMwq8KudvrakjKcdARfZYfiI3t95bRSgM
+PAq4kCsSCnYA994eP5kheia2EK8eCI8Rn93fFSzBUQED9zAYuD8=
+=XGf8
 -----END PGP SIGNATURE-----
