@@ -1,23 +1,20 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2021 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
-# $Header: $
 
-EAPI=5
+EAPI=7
 
 inherit font
 
 DESCRIPTION="A font that imitates Daniel Kahn Gillmor's handwriting"
 HOMEPAGE="http://lair.fifthhorseman.net/~dkg/fonts/dkg-handwriting/"
-
-SRC_URI="http://dev.gentoo.org/~klondike/${PN}/${P}.tar.xz"
+SRC_URI="https://dev.gentoo.org/~klondike/${PN}/${P}.tar.xz"
 
 KEYWORDS="~amd64 ~x86"
 SLOT="0"
 LICENSE="OFL-1.1"
 IUSE="fontforge"
 
-DEPEND="fontforge? ( media-gfx/fontforge[unicode] )"
-RDEPEND=""
+BDEPEND="fontforge? ( media-gfx/fontforge[unicode] )"
 
 FONT_SUFFIX="ttf"
 DOCS="CHANGELOG README.TXT"
