@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/ttf-fifthhorseman-dkg-handwriting
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2021 Gentoo Authors; Distributed under the GPL v2
 # $Header: $
+
+  01 Apr 2021;  <klondike@gentoo.org> metadata.xml,
+  ttf-fifthhorseman-dkg-handwriting-0.15.ebuild:
+  media-fonts/ttf-fifthhorseman-dkg-handwriting: migrate to EAPI=7
 
   04 Jun 2015; Francisco Blas Izquierdo Riera (klondike) metadata.xml:
   Update the metadata.xml with my gentoo e-mail
